added the item returning feature and the returning mail feature

--- a/static/navbar.html
+++ b/static/navbar.html
@@ -380,7 +380,7 @@ https://templatemo.com/tm-570-chain-app-dev
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li class="scroll-to-section"><a href="/home/" class="active">Home</a></li>
-              <li class="scroll-to-section"><a href="#" class="active">Borrow List</a></li>
+              <li class="scroll-to-section"><a href="/borrowlist/" class="active">Borrow List</a></li>
               <li class="scroll-to-section"><a href="/club/" class="active">Clubs</a></li>
               <li class="scroll-to-section"><a href="/" class="active">Logout</a></li>
               <li class="scroll-to-section"></li>
